# c-mente

./: CMakeLists.txt  LICENSE  README.md
src/: main.c
src/core/: nn.c  nn.h
